--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 				<!-- Intro -->
 					<div id="intro">
-						<h1>Wiley Jones Profolio</h1>
+						<h1>Wiley Jones Portfolio</h1>
 						<p>Aspiring Data Scientist and Machine Learning Engineer</p>
 						<p><a href="https://github.com/wileyalanjones">GitHub</a> | <a href="https://www.linkedin.com/in/wiley-jones-99bba3122/">LinkedIn</a></p>
 						<ul class="actions">
@@ -129,4 +129,5 @@
 			<script src="assets/js/main.js"></script>
 
 	</body>
+
 </html>
